[package]
name = "doc"
description = "Open doc url easily"
version = "0.2.0"
edition = "2021"
readme = "README.md"
authors = ["wangxd <lovingskymm@foxmail.com>"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
coverage = []

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
dyn-fmt = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
webbrowser = "0.8.12"
isahc = "1.7"
openssl = { version = "0.10.40", features = ["vendored"] }

[package.metadata.deb]
section = "utils"
assets = [
  [
    "target/release/doc",
    "usr/bin/",
    "755",
  ],
  [
    "LICENSE",
    "usr/share/doc/doc/",
    "644",
  ],
  [
    "README.md",
    "usr/share/doc/doc/README",
    "644",
  ],
]
